--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,12 @@
+body {
+  background-color:burlywood;
+  font-family: 'Comfortaa', cursive;
+}
 h1 {
   text-align: center;
+  text-shadow: 2px 2px blanchedalmond;
+
+
 }
 
 .card-text-showing {
@@ -7,6 +14,7 @@ h1 {
 }
 
 .card {
+
   margin: auto;
   margin-left: 7.5%;
   margin-top: 50px;
@@ -24,4 +32,6 @@ h1 {
   0 36.5px 29.2px rgba(0, 0, 0, 0.207),
   0 56.3px 45px rgba(0, 0, 0, 0.237),
   0 100px 80px rgba(0, 0, 0, 0.3);
+  background-color: blanchedalmond;
 }
+
